# ai-journalist

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py  models.py
backend/app/services/: audio_generator.py  summarizer.py
frontend/ui/: index.html  package-lock.json  package.json
frontend/ui/src/: App.tsx
frontend/ui/src/components/Layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/ui/src/pages/: GenerateReportPage.tsx  LandingPage.tsx
